# scultureai

./: .gitignore  package-lock.json  package.json  pyproject.toml  serverless.yaml
scultureai/: main.py
