[tool.poetry]
name = "structureai"
version = "0.1.0"
description = ""
authors = ["Shweta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
boto3 = "^1.34.84"
botocore = "^1.34.84"
uvicorn = "^0.29.0"
mangum = "^0.17.0"
cognitojwt = {extras = ["sync"], version = "^1.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
